# joshi-network

./: .coverage  .gitignore  Makefile  README.md  analyze.py  directory.py  do_rank.py  generate_network.py  promotion_plot.py  pyproject.toml  reprocess.py  scrape.py  test_promotions_worked.py  test_team_extraction.py
data/: README
doc/: PROMOTIONS_WORKED.md
joshirank/: all_matches.py  db_wrapper.py  identifier.py  joshi_data.py  joshidb.py  queries.py  record.py
joshirank/analysis/: __init__.py  gender.py  gender_cache.py  name.py  promotion.py
joshirank/cagematch/: cm_match.py  cm_match_embed.py  cm_match_old.py  cm_match_token.py  cm_parse.py  data.py  match_tokenizer.py  profile.py  promotion.py  scraper.py  util.py
joshirank/ranking/: glicko2.py  record.py
joshirank/scrape/: operations.py  priority.py  queue_builder.py  scrapeinfo.py  staleness.py  workqueue.py
scripts/: do_rank.py  generate_landing_pages.py  generate_network.py  list_available_years.py  promotion_plot.py  scrape.py
scripts/analysis/: analyze.py  analyze_database.py  analyze_intergender_matches.py  analyze_male_wrestlers.py  analyze_missing_wrestler_predictors.py  check_stub_only_wrestlers.py  joshi_anniversaries.py  match_processing.py  tjpw_combinations.py  wrestler_stats.py
scripts/migration/: add_career_end.py  create_promotions_table.py  delete_empty_2025_stubs.py  delete_empty_match_stubs.py  fix_female_stub_years.py  migrate_promotions.py  purge_inactive_empty_matches.py  purge_nonfemale_stub_matches.py  reprocess.py
templates/: base.css  force_graph.html  main_index.html  network.html  placeholder_network.html  placeholder_promotions.html  placeholder_ranking.html  placeholder_year.html  promotions.html  ranking.html  year_hub.html
templates/partials/: nav-links.html
tests/: README.md  conftest.py  test_promotions_worked.py
tests/fixtures/html/: promotion_745_stardom.html  wrestler_4629_matches_2025.html  wrestler_4629_profile.html
tests/integration/: test_database.py  test_promotion_database.py  test_scraping_with_vcr.py
tests/integration/cassettes/: test_scrape_matches_with_vcr.yaml  test_scrape_new_wrestler.yaml  test_scrape_profile_with_vcr.yaml
tests/unit/: test_gender_cache.py  test_match_parsing.py  test_match_parsing_additional.py  test_priority_with_gender.py  test_profile.py  test_promotion.py  test_workqueue.py
tests/unit/cagematch/: test_match_parsing.py  test_match_parsing_additional.py  test_match_parsing_tok.py  test_name_extraction.py  test_tokenizer.py
