[tool.poetry]
name = "joshi-network"
version = "0.1.0"
description = ""
authors = ["ted whalen <tewhalen@gmail.com>"]
readme = "README.md"
packages = [{include = "joshirank"}]

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
tabulate = "^0.9.0"
loguru = "^0.7.3"
columnar = "^1.4.1"
numpy = "^2.3.5"
matplotlib = "^3.10.7"
sparklines = "^0.7.0"
jinja2 = "^3.1.6"
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
