[project]
name = "joshi-network"
version = "0.1.0"
description = "Japanese women's wrestling data scraping and ranking system"
authors = [{name = "ted whalen", email = "tewhalen@gmail.com"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "tabulate>=0.9.0",
    "loguru>=0.7.3",
    "columnar>=1.4.1",
    "numpy>=2.3.5",
    "matplotlib>=3.10.7",
    "sparklines>=0.7.0",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.8.0",
    "pytest-vcr>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["joshirank"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=joshirank --cov-report=term-missing"


